--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "pinia": "^3.0.1",
     "@quasar/extras": "^1.16.4",
+    "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^2.1.0",
+    "@vue/devtools": "^7.7.6",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.14"
   },
